diesel_compile_tests/tests/fail/delete_statement_does_not_support_returning_methods_on_sqlite.stderr
error[E0277]: the trait bound `ReturningClause<(columns::id, columns::name)>: QueryFragment<Sqlite, DoesNotSupportReturningClause>` is not satisfied
  --> $DIR/delete_statement_does_not_support_returning_methods_on_sqlite.rs:17:10
   |
17 |         .get_result(&mut connection);
   |          ^^^^^^^^^^ the trait `QueryFragment<Sqlite, DoesNotSupportReturningClause>` is not implemented for `ReturningClause<(columns::id, columns::name)>`
   |
   = help: the following implementations were found:
             <ReturningClause<Expr> as QueryFragment<DB, PgLikeReturningClause>>
             <ReturningClause<Expr> as QueryFragment<DB>>
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `ReturningClause<(columns::id, columns::name)>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, ReturningClause<(columns::id, columns::name)>>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::SqliteConnection, _>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>>`

error[E0277]: the trait bound `ReturningClause<columns::name>: QueryFragment<Sqlite, DoesNotSupportReturningClause>` is not satisfied
  --> $DIR/delete_statement_does_not_support_returning_methods_on_sqlite.rs:21:10
   |
21 |         .get_result(&mut connection);
   |          ^^^^^^^^^^ the trait `QueryFragment<Sqlite, DoesNotSupportReturningClause>` is not implemented for `ReturningClause<columns::name>`
   |
   = help: the following implementations were found:
             <ReturningClause<Expr> as QueryFragment<DB, PgLikeReturningClause>>
             <ReturningClause<Expr> as QueryFragment<DB>>
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `ReturningClause<columns::name>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, ReturningClause<columns::name>>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::SqliteConnection, _>` for `DeleteStatement<users::table, diesel::query_builder::where_clause::WhereClause<Grouped<diesel::expression::operators::Eq<columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>>, ReturningClause<columns::name>>`
